--- a/src/SkiDayCount/SkiDayCount.scss
+++ b/src/SkiDayCount/SkiDayCount.scss
@@ -1,4 +1,5 @@
 .SkiDayCount {
+  margin: 20px;
   display: flex;
   flex-wrap: wrap;
   font-size: 3em;
@@ -39,3 +40,4 @@
     color: red;
   }
 }
+
