--- a/src/App/components/Header/Header.scss
+++ b/src/App/components/Header/Header.scss
@@ -4,4 +4,5 @@ $padding: 20px;
     font-family: 'Rock Salt', cursive;
     color: rgba($color: snow, $alpha: 0.5);
     padding: $padding;
+    text-align: center;
 }
