--- a/src/App/components/SkiDayCount/SkiDayCount.scss
+++ b/src/App/components/SkiDayCount/SkiDayCount.scss
@@ -1,43 +1,98 @@
 .SkiDayCount {
-  margin: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 3em;
-  height: calc(100% - 3em);
-  > div {
+    margin: 20px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    &.total-days {
-      flex-basis: 100%;
-      font-size: 2em;
-      span, svg {
-        height: 200px;
-      }
+    flex-wrap: wrap;
+    font-size: 3em;
+    height: calc(100% - 3em);
+    >div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &.total-days {
+            flex-basis: 100%;
+            font-size: 2em;
+            span,
+            svg {
+                height: 200px;
+            }
+        }
+        &:not(.total-days) {
+            flex-basis: 50%;
+        }
+        span,
+        svg {
+            background-color: white;
+            height: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &:first-child {
+                border-radius: 25px 0 0 25px;
+                padding-left: 15px;
+            }
+            &:last-child {
+                border-radius: 0 25px 25px 0;
+                font-size: .5em;
+                padding-right: 15px;
+            }
+        }
+    } //this is for the React-icons
+    svg {
+        color: red;
     }
-    &:not(.total-days) {
-      flex-basis: 50%;
+    .imgGrid {
+        display: grid !important;
+        grid-gap: 10px 5px;
+        grid-template-columns: repeat(6, 1fr);
+        width: 100%;
+        list-style: none;
+        position: relative;
+        // width: 50%;
+        img {
+            height: 150px;
+            width: 150px;
+        }
+        .container {
+          position: relative;
+          width: 100%;
+      }   
+        .image {
+            display: block;
+            opacity: 1;
+            width: 100%;
+            height: auto;
+            transition: .5s ease;
+            backface-visibility: hidden;
+            z-index: -1;
+        }
+        .image:hover {
+            opacity: .5;
+        }
+        .middle {
+            transition: .5s ease;
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            text-align: center;
+            z-index: 1  ;
+            clip-path: circle(50.2% at 50% 50%);
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+}
+        .container:hover .middle {
+            opacity: 1;
+        }
+        .text {
+            background-color: rgba($color: transparent, $alpha: .4);
+            color: white;
+            font-size: 10px;
+            // overflow:hidden;
+            padding: 16px;
+        }
     }
-    span, svg {
-      background-color: white;
-      height: 100px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      &:first-child {
-        border-radius: 25px 0 0 25px;
-        padding-left: 15px;
-      }
-      &:last-child {
-        border-radius: 0 25px 25px 0;
-        font-size: .5em;
-        padding-right: 15px;
-      }
-    }
-  }
-  //this is for the React-icons
-  svg {
-    color: red;
-  }
 }
 
